[Qt][WK2] Canvas tests make css2.1 ones failing https://bugs.webkit.org/show_bug.cgi?id=53427

Patch by Zoltan Herczeg <zherczeg@inf.u-szeged.hu> on 2011-06-09
Reviewed by Csaba Osztrogonac.

Tools:

Adding a workaround for this issue by mimicing the behaviour of DumpRenderTree.
Since the Qt port should eventually go to QRawFont, this issue will be resolved
in the future. Both clearMemoryCaches() and removeAllApplicationFonts() are
needed for the workaround.

* WebKitTestRunner/InjectedBundle/qt/LayoutTestControllerQt.cpp:
(WTR::LayoutTestController::platformInitialize):

LayoutTests:

Unskipping canvas tests for WebKit2-Qt.

* platform/qt-wk2/Skipped:



Canonical link: https://commits.webkit.org/77854@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@88435 268f45cc-cd09-0410-ab3c-d52691b4dbfc